--- a/index.html
+++ b/index.html
@@ -1,1 +1,31 @@
+<!-- This is a comment. Feel free to delete or write your own as helpful notes. They won't appear on your website, but they do appear if you inspect the code. -->
+
+<head>
+    <meta charset="utf-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
+    <title>Week 3 Exercise</title>
+    <meta name="description" content="Your description goes here">
+    <meta name="author" content="Your Name">
+
+    <!-- Link to your favicon -->
     <link rel="shortcut icon" type="image/png" href="./favicon.png" />
+
+    <!-- Link to your stylesheet -->
+    <link rel="stylesheet" href="./style.css">
+</head>
+
+
+<body>
+    <h1>Space Grotesk Regular</h1>
+    <h2>Space Grotesk Regular</h2>
+    <p class="paragraph">What is Lorem Ipsum?
+        Lorem Ipsum is simply dummy text of the printing and typesetting industry. <span class="red">Lorem Ipsum </span>has been the industry's
+        standard dummy text ever since the 1500s, when an unknown printer took a galley of type and scrambled it to make
+        a type specimen book. It has survived not only five centuries, but also the leap into electronic typesetting,
+        remaining essentially unchanged. It was popularised in the 1960s with the release of Letraset sheets containing
+        Lorem Ipsum passages, and more recently with desktop publishing software like <span class="invisible">Aldus PageMaker </span>including versions
+        of Lorem Ipsum.</p>
+    <!-- Start building your website here! -->
+</body>
+
+</html>
