--- a/index.html
+++ b/index.html
@@ -1,5 +1,7 @@
 <!-- This is a comment. Feel free to delete or write your own as helpful notes. They won't appear on your website, but they do appear if you inspect the code. -->
 
+<html lang="en">
+
 <head>
     <meta charset="utf-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
